[package]
name = "blackbone-sys"
version = "0.1.0"
license = "MIT"
description = "FFI bindings to Blackbone"
repository = "https://github.com/smallevilbeast/rust-blackbone"
readme = "README.md"
categories = ["blackbone", "external-ffi-bindings"]
links = "blackbone"
edition = "2021"


[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "processthreadsapi", "windef"] }

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
